# neuralnet

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: classification.cpp  xor.cpp
include/: MLPNetwork.h
src/: MLPNetwork.cpp
